--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Configuration\ClientScriptGroupElement.cs" />
     <Compile Include="Configuration\ClientScriptGroupElementCollection.cs" />
     <Compile Include="CssDependencyProvider.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="GroupTemplateContext.cs" />
     <Compile Include="IO\IFileAccess.cs" />
     <Compile Include="IResourceGroupManager.cs" />
     <Compile Include="PreConsolidation\CompiledFilePersister.cs" />
@@ -104,6 +106,7 @@
     <Compile Include="Configuration\PluginElement.cs" />
     <Compile Include="Configuration\PluginElementCollection.cs" />
     <Compile Include="PreConsolidation\PreConsolidatedDependencyCache.cs" />
+    <Compile Include="PreConsolidation\PreConsolidatedGroupManager.cs" />
     <Compile Include="PreConsolidation\PreConsolidatedResourceDependencies.cs" />
     <Compile Include="PreConsolidation\PreConsolidationReport.cs" />
     <Compile Include="Configuration\PropertyNames.cs" />
