Moved consolidation logic out of ResourceManagementContext into a new ResourceConsolidator class.

--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Registration\ResourceRegistryRenderer.cs" />
     <Compile Include="Registration\TextWriterExtensions.cs" />
     <Compile Include="ResourceCollectionExtensions.cs" />
+    <Compile Include="ResourceConsolidator.cs" />
     <Compile Include="ResourceGroupManager.cs" />
     <Compile Include="ResourceGroup.cs" />
     <Compile Include="ResourceMode.cs" />
