Refactored some tests.

--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -100,18 +100,21 @@
     <Compile Include="TestEmbeddedResource.cs" />
     <Compile Include="TestEmbeddedResourceFinder.cs" />
     <Compile Include="TestPluginElement.cs" />
+    <Compile Include="TestResourceConsolidator.cs" />
     <Compile Include="TestResourceHttpHandler.cs" />
     <Compile Include="TestResourceManagementContext.cs" />
     <Compile Include="TestResourceManagementContext_GetResourceUrl.cs" />
     <Compile Include="TestResourceManagementContext_PreConsolidation.cs" />
     <Compile Include="TestResourceType.cs" />
     <Compile Include="TestSupport\AssertionExtensions.cs" />
+    <Compile Include="TestSupport\ResourceTestContext.cs" />
     <Compile Include="TestSupport\StubDependencyProvider.cs" />
     <Compile Include="TestSupport\StubFileAccess.cs" />
     <Compile Include="TestSupport\StubPlugin.cs" />
     <Compile Include="TestSupport\StubRequestContext.cs" />
     <Compile Include="TestSupport\StubResourceFinder.cs" />
     <Compile Include="TestSupport\StubResourceFinderFactory.cs" />
+    <Compile Include="TestSupport\StubResourceGroup.cs" />
     <Compile Include="TestSupport\StubResourceGroupTemplate.cs" />
     <Compile Include="TestSupport\StubResourceType.cs" />
     <Compile Include="TestSupport\TempDirectoryManager.cs" />
