--- a/samples/Mvc-WebAppProject/Website/Web.config
+++ b/samples/Mvc-WebAppProject/Website/Web.config
@@ -99,8 +99,8 @@
       </controls>
     </pages>
     <httpHandlers>
-      <add verb="GET,HEAD" path="*.jsx" validate="false" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
-      <add verb="GET,HEAD" path="*.cssx" validate="false" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.js" validate="false" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.css" validate="false" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
       <remove verb="*" path="*.asmx"/>
       <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -130,8 +130,8 @@
       <remove name="ScriptHandlerFactoryAppServices"/>
       <remove name="ScriptResource"/>
       <remove name="UrlRoutingHandler"/>
-      <add name="ConsolidatedJavascriptHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.jsx" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
-      <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.cssx" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedJavascriptHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.js" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.css" type="AlmWitt.Web.ResourceManagement.ResourceHttpHandler, AlmWitt.Web.ResourceManagement, Version=1.0.0.0, Culture=neutral"/>
       <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
