--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Configuration\AssemblyElementCollection.cs" />
     <Compile Include="Configuration\ClientScriptGroupElement.cs" />
     <Compile Include="Configuration\ClientScriptGroupElementCollection.cs" />
+    <Compile Include="Configuration\IResourceModeProvider.cs" />
     <Compile Include="CssDependencyProvider.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="GroupTemplateContext.cs" />
