Added integration test for including by group url when that group has consolidation disabled.  Made the dependency sorting a stable sort so that the sorting that happens within the group is not trashed.

--- a/samples/Mvc-WebAppProject/Website/ResourceManagement.config
+++ b/samples/Mvc-WebAppProject/Website/ResourceManagement.config
@@ -15,6 +15,11 @@
         <add pattern="\.debug\.js$" />
       </exclude>
     </group>
+    <group consolidatedUrl="~/Scripts/Consolidated/Disabled.js" consolidate="false">
+      <include>
+        <add pattern="~/Scripts/Unconsolidated/.+" />
+      </include>
+    </group>
     <group consolidatedUrl="~/Scripts/Consolidated/Controllers/{controller}.js">
       <include>
         <add pattern="~/Views/(?'controller'\w+)/.+" />
