More renames to Assman

--- a/samples/AspNet-WebSiteProject/Website/Web.Config
+++ b/samples/AspNet-WebSiteProject/Website/Web.Config
@@ -9,7 +9,7 @@
 -->
 <configuration>
 	<configSections>
-		<section name="assman" type="Assman.Configuration.ResourceManagementConfiguration, Assman, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+		<section name="assman" type="Assman.Configuration.AssmanConfiguration, Assman, Version=1.0.0.0, Culture=neutral"/>
 		<sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
 			<sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
 				<section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
