--- a/samples/LessIntegration/Assman.config
+++ b/samples/LessIntegration/Assman.config
@@ -9,6 +9,6 @@
     </group>
   </cssFiles>
   <plugins>
-    <add type="Assman.Less.LessResourceManagementPlugin, Assman.Less, Version=1.0.0.0, Culture=neutral" />
+    <add type="Assman.Less.dotLessAssmanPlugin, Assman.Less, Version=1.0.0.0, Culture=neutral" />
   </plugins>
 </assman>
