--- a/samples/LessIntegration/Web.config
+++ b/samples/LessIntegration/Web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <configSections>
-    <section name="assman" type="Assman.Configuration.ResourceManagementConfiguration"/>
+    <section name="assman" type="Assman.Configuration.AssmanConfiguration"/>
   </configSections>
   <assman configSource="Assman.config" />
   <connectionStrings>
