--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -41,6 +41,6 @@
   </cssFiles>
   <plugins>
     <!-- add support for .less files -->
-    <add type="Assman.Less.LessResourceManagementPlugin, Assman.Less, Version=1.0.0.0, Culture=neutral" />
+    <add type="Assman.Less.dotLessAssmanPlugin, Assman.Less, Version=1.0.0.0, Culture=neutral" />
   </plugins>
 </assman>
