--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -89,9 +89,14 @@
     <Compile Include="CompositeResourceFinder.cs" />
     <Compile Include="Configuration\AssemblyElement.cs" />
     <Compile Include="Configuration\AssemblyElementCollection.cs" />
-    <Compile Include="Configuration\ClientScriptGroupElement.cs" />
-    <Compile Include="Configuration\ClientScriptGroupElementCollection.cs" />
+    <Compile Include="Configuration\GlobalDependenciesElement.cs" />
+    <Compile Include="Configuration\GlobalDependenciesElementCollection.cs" />
+    <Compile Include="Configuration\ScriptGroupElement.cs" />
+    <Compile Include="Configuration\ScriptGroupElementCollection.cs" />
     <Compile Include="Configuration\IResourceModeProvider.cs" />
+    <Compile Include="Configuration\ResourceConfigurationElement.cs" />
+    <Compile Include="Configuration\ScriptsConfigurationElement.cs" />
+    <Compile Include="Configuration\StylesheetsConfigurationElement.cs" />
     <Compile Include="CssDependencyProvider.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="GroupTemplateContext.cs" />
@@ -103,8 +108,8 @@
     <Compile Include="Configuration\ConfigurationHelper.cs" />
     <Compile Include="Configuration\ConsolidatedUrlTemplate.cs" />
     <Compile Include="Configuration\ContentFilterMap.cs" />
-    <Compile Include="Configuration\CssGroupElement.cs" />
-    <Compile Include="Configuration\CssGroupElementCollection.cs" />
+    <Compile Include="Configuration\StylesheetGroupElement.cs" />
+    <Compile Include="Configuration\StylesheetGroupElementCollection.cs" />
     <Compile Include="PreConsolidation\IPreConsolidationReportPersister.cs" />
     <Compile Include="Configuration\IAssmanPlugin.cs" />
     <Compile Include="Configuration\MappedConfigLoader.cs" />
