--- a/src/PackageSpecs/Assman/Content/Assman.config
+++ b/src/PackageSpecs/Assman/Content/Assman.config
@@ -1,17 +1,21 @@
 <assman consolidate="true" manageDependencies="true">
-  <clientScripts>
-    <group consolidatedUrl="~/Scripts/Consolidated/Shared.js">
-      <include>
-        <add pattern="~/Scripts/jquery-1\.\d\.\d\.min\.js" mode="Release" />
-        <add pattern="~/Scripts/jquery-1\.\d\.\d\.js" mode="Debug" />
-      </include>
-    </group>
-  </clientScripts>
-  <cssFiles>
-    <group consolidatedUrl="~/Content/Consolidated/Shared.css">
-      <include>
-        <add pattern="~/Content/.+" />
-      </include>
-    </group>
-  </cssFiles>
+  <scripts>
+    <groups>
+      <group consolidatedUrl="~/Scripts/Consolidated/Shared.js">
+        <include>
+          <add pattern="~/Scripts/jquery-1\.\d\.\d\.min\.js" mode="Release" />
+          <add pattern="~/Scripts/jquery-1\.\d\.\d\.js" mode="Debug" />
+        </include>
+      </group>
+    </groups>
+  </scripts>
+  <stylesheets>
+    <groups>
+      <group consolidatedUrl="~/Content/Consolidated/Shared.css">
+        <include>
+          <add pattern="~/Content/.+" />
+        </include>
+      </group>
+    </groups>
+  </stylesheets>
 </assman>
