Hooked up Global Dependencies.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -27,6 +27,9 @@
         </include>
       </group>
     </groups>
+    <globalDependencies>
+      <add path="~/scripts/Global-Dependency.js" />
+    </globalDependencies>
   </scripts>
   <stylesheets>
     <groups>
