--- a/samples/Mvc-WebAppProject/Website/Website.csproj
+++ b/samples/Mvc-WebAppProject/Website/Website.csproj
@@ -97,6 +97,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Scripts\Assman-TestBootstrapper.js" />
+    <Content Include="Scripts\Global-Dependency.js" />
     <Content Include="Scripts\Unconsolidated\MyScript1.js" />
     <Content Include="Scripts\Unconsolidated\MyScript2.js" />
     <Content Include="Views\bindings.xml" />
