--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -100,7 +100,7 @@
     <Compile Include="CssDependencyProvider.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="GroupTemplateContext.cs" />
-    <Compile Include="HttpHandlerBase.cs" />
+    <Compile Include="Handlers\HttpHandlerBase.cs" />
     <Compile Include="IO\IFileAccess.cs" />
     <Compile Include="IResourceCache.cs" />
     <Compile Include="IResourceGroupManager.cs" />
@@ -146,8 +146,6 @@
     <Compile Include="IResourceFinderFactory.cs" />
     <Compile Include="IResourceGroup.cs" />
     <Compile Include="IResourceGroupTemplate.cs" />
-    <Compile Include="IResourceHandler.cs" />
-    <Compile Include="IResourceHandlerFactory.cs" />
     <Compile Include="PathResourceMatch.cs" />
     <Compile Include="PreConsolidation\PreConsolidatedResourceGroup.cs" />
     <Compile Include="Registration\ConsolidatingResourceRegistry.cs" />
@@ -174,7 +172,7 @@
     <Compile Include="ResourceConsolidator.cs" />
     <Compile Include="ResourceGroupManager.cs" />
     <Compile Include="ResourceGroup.cs" />
-    <Compile Include="ResourceHttpHandler.cs" />
+    <Compile Include="Handlers\ResourceHttpHandlerFactory.cs" />
     <Compile Include="ResourceMode.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ThreadSafeInMemoryCache.cs" />
@@ -187,7 +185,7 @@
     <Compile Include="IResourceFilter.cs" />
     <Compile Include="IResourceFinder.cs" />
     <Compile Include="ResourceFilters.cs" />
-    <Compile Include="DynamicResourceHttpHandler.cs" />
+    <Compile Include="Handlers\HttpRequestContext.cs" />
     <Compile Include="Registration\WebForms\RequireStylesheet.cs" />
     <Compile Include="Registration\WebForms\RequireScript.cs" />
     <Compile Include="Registration\WebForms\WebFormsStyleRegistry.cs" />
@@ -198,9 +196,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileResource.cs" />
     <Compile Include="ResourceCollection.cs" />
-    <Compile Include="ResourceHandler.cs" />
+    <Compile Include="Handlers\ConsolidatedResourceHandler.cs" />
     <Compile Include="ResourceFinderFactory.cs" />
     <Compile Include="ResourceType.cs" />
+    <Compile Include="Handlers\UnconsolidatedResourceHandler.cs" />
     <Compile Include="VirtualPathResolver.cs">
       <SubType>Code</SubType>
     </Compile>
