Added support for including custom resources such as .less resources without requiring them to be consolidated.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -38,6 +38,9 @@
           <add pattern="~/Content/.+" />
           <add pattern="~/Views/Shared/.+" />
         </include>
+        <exclude>
+          <add pattern="~/Content/Unconsolidated/.+" />
+        </exclude>
       </group>
       <group consolidatedUrl="~/Content/Consolidated/Controllers/{controller}.css">
         <include>
