--- a/samples/Mvc-WebAppProject/Website/Web.config
+++ b/samples/Mvc-WebAppProject/Website/Web.config
@@ -101,6 +101,7 @@
     <httpHandlers>
       <add verb="GET,HEAD" path="*.js" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <add verb="GET,HEAD" path="*.css" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.less" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <remove verb="*" path="*.asmx"/>
       <add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -132,6 +133,7 @@
       <remove name="UrlRoutingHandler"/>
       <add name="ConsolidatedJavascriptHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.js" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.css" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.less" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
