--- a/samples/Mvc-WebAppProject/Website/Website.csproj
+++ b/samples/Mvc-WebAppProject/Website/Website.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <None Include="Content\Unconsolidated\TestHelper.less" />
     <None Include="Views\Home\Index.spark" />
     <None Include="Views\IntegrationTests\Index.spark">
       <SubType>Designer</SubType>
@@ -104,7 +105,9 @@
     <Content Include="Scripts\Dependency.js" />
     <Content Include="Scripts\DependencyLeaf.js" />
     <Content Include="Views\IntegrationTests\ScriptIncludeBinding.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
