Renamed "Consolidated" to "Compiled" in many cases.  Normalized ConsolidatedResource and CompiledResource to implement the same interface.

--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -85,7 +85,7 @@
     <Compile Include="BuildSupport\MSBuild\PreConsolidateResources.cs" />
     <Compile Include="BuildSupport\NullLogger.cs" />
     <Compile Include="Comparers.cs" />
-    <Compile Include="CompiledResource.cs" />
+    <Compile Include="IndividuallyCompiledResource.cs" />
     <Compile Include="CompositeResourceFilter.cs" />
     <Compile Include="CompositeResourceFinder.cs" />
     <Compile Include="Configuration\AssemblyElement.cs" />
@@ -104,26 +104,27 @@
     <Compile Include="GroupTemplateContext.cs" />
     <Compile Include="Handlers\HttpHandlerBase.cs" />
     <Compile Include="Handlers\ResourceHandlerBase.cs" />
+    <Compile Include="ICompiledResource.cs" />
     <Compile Include="IO\IFileAccess.cs" />
     <Compile Include="IResourceCache.cs" />
     <Compile Include="IResourceGroupManager.cs" />
-    <Compile Include="PreConsolidation\CompiledFilePersister.cs" />
+    <Compile Include="PreCompilation\CompiledFilePersister.cs" />
     <Compile Include="Configuration\ConfigurationHelper.cs" />
     <Compile Include="Configuration\ConsolidatedUrlTemplate.cs" />
     <Compile Include="Configuration\ContentFilterMap.cs" />
     <Compile Include="Configuration\StylesheetGroupElement.cs" />
     <Compile Include="Configuration\StylesheetGroupElementCollection.cs" />
-    <Compile Include="PreConsolidation\IPreConsolidationReportPersister.cs" />
+    <Compile Include="PreCompilation\IPreCompiledReportPersister.cs" />
     <Compile Include="Configuration\IAssmanPlugin.cs" />
     <Compile Include="Configuration\MappedConfigLoader.cs" />
     <Compile Include="Configuration\PluginElement.cs" />
     <Compile Include="Configuration\PluginElementCollection.cs" />
-    <Compile Include="PreConsolidation\PreCompiledSingleResource.cs" />
-    <Compile Include="PreConsolidation\PreConsolidatedDependencyCache.cs" />
-    <Compile Include="PreConsolidation\PreConsolidatedGroupManager.cs" />
-    <Compile Include="PreConsolidation\PreConsolidatedResourceDependencies.cs" />
-    <Compile Include="PreConsolidation\PreConsolidatedResourceReport.cs" />
-    <Compile Include="PreConsolidation\PreConsolidationReport.cs" />
+    <Compile Include="PreCompilation\PreCompiledSingleResource.cs" />
+    <Compile Include="PreCompilation\PreCompiledDependencyCache.cs" />
+    <Compile Include="PreCompilation\PreCompiledGroupManager.cs" />
+    <Compile Include="PreCompilation\PreCompiledResourceDependencies.cs" />
+    <Compile Include="PreCompilation\PreCompiledResourceReport.cs" />
+    <Compile Include="PreCompilation\PreCompilationReport.cs" />
     <Compile Include="Configuration\PropertyNames.cs" />
     <Compile Include="Configuration\ResourceGroupElement.cs" />
     <Compile Include="Configuration\ResourceGroupElementCollection.cs" />
@@ -152,7 +153,7 @@
     <Compile Include="IResourceGroup.cs" />
     <Compile Include="IResourceGroupTemplate.cs" />
     <Compile Include="PathResourceMatch.cs" />
-    <Compile Include="PreConsolidation\PreConsolidatedResourceGroup.cs" />
+    <Compile Include="PreCompilation\PreCompiledResourceGroup.cs" />
     <Compile Include="Registration\ConsolidatingResourceRegistry.cs" />
     <Compile Include="Registration\ConsolidatingResourceRegistryAccessor.cs" />
     <Compile Include="Registration\DependencyResolvingResourceRegistry.cs" />
@@ -174,7 +175,7 @@
     <Compile Include="Registration\TextWriterExtensions.cs" />
     <Compile Include="ResourceCacheFactory.cs" />
     <Compile Include="ResourceCollectionExtensions.cs" />
-    <Compile Include="ResourceConsolidator.cs" />
+    <Compile Include="ResourceCompiler.cs" />
     <Compile Include="ResourceGroupManager.cs" />
     <Compile Include="ResourceGroup.cs" />
     <Compile Include="Handlers\ResourceHttpHandlerFactory.cs" />
