Added functionality to exclude files that have been manually minified from individual pre-compilation.

--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Registration\WebForms\WebFormsClientScriptRegistry.cs" />
     <Compile Include="VirtualPathUtil.cs" />
     <Compile Include="VisualStudioScriptDependencyProvider.cs" />
+    <Compile Include="VsDocResourceExcluder.cs" />
     <Compile Include="Xml\XmlWriterExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
