Renamed pattern attribute in Assman.config to regex to be more clear about what it is.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -10,20 +10,20 @@
       </group>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared/Microsoft.js">
         <include>
-          <add pattern="~/Scripts/^Microsoft.+\.js$" />
+          <add regex="~/Scripts/^Microsoft.+\.js$" />
         </include>
         <exclude>
-          <add pattern="\.debug\.js$" />
+          <add regex="\.debug\.js$" />
         </exclude>
       </group>
       <group consolidatedUrl="~/Scripts/Consolidated/Disabled.js" consolidate="false">
         <include>
-          <add pattern="~/Scripts/Unconsolidated/.+" />
+          <add regex="~/Scripts/Unconsolidated/.+" />
         </include>
       </group>
       <group consolidatedUrl="~/Scripts/Consolidated/Controllers/{controller}.js">
         <include>
-          <add pattern="~/Views/(?'controller'\w+)/.+" />
+          <add regex="~/Views/(?'controller'\w+)/.+" />
         </include>
       </group>
     </groups>
@@ -35,16 +35,16 @@
     <groups>
       <group consolidatedUrl="~/Content/Consolidated/Shared.css">
         <include>
-          <add pattern="~/Content/.+" />
-          <add pattern="~/Views/Shared/.+" />
+          <add regex="~/Content/.+" />
+          <add regex="~/Views/Shared/.+" />
         </include>
         <exclude>
-          <add pattern="~/Content/Unconsolidated/.+" />
+          <add regex="~/Content/Unconsolidated/.+" />
         </exclude>
       </group>
       <group consolidatedUrl="~/Content/Consolidated/Controllers/{controller}.css">
         <include>
-          <add pattern="~/Views/(?'controller'\w+)/.+" />
+          <add regex="~/Views/(?'controller'\w+)/.+" />
         </include>
       </group>
     </groups>
