--- a/src/PackageSpecs/Assman/Content/Assman.config
+++ b/src/PackageSpecs/Assman/Content/Assman.config
@@ -3,8 +3,8 @@
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared.js">
         <include>
-          <add pattern="~/Scripts/jquery-1\.\d\.\d\.min\.js" mode="Release" />
-          <add pattern="~/Scripts/jquery-1\.\d\.\d\.js" mode="Debug" />
+          <add regex="~/Scripts/jquery-1\.\d\.\d\.min\.js" mode="Release" />
+          <add regex="~/Scripts/jquery-1\.\d\.\d\.js" mode="Debug" />
         </include>
       </group>
     </groups>
@@ -13,7 +13,7 @@
     <groups>
       <group consolidatedUrl="~/Content/Consolidated/Shared.css">
         <include>
-          <add pattern="~/Content/.+" />
+          <add regex="~/Content/.+" />
         </include>
       </group>
     </groups>
